[package]
name = "uri"
version = "0.1.0" # remember to update html_root_url
readme = "README.md"
documentation = "https://docs.rs/uri"
repository = "https://github.com/hyperium/uri"
homepage = "https://github.com/hyperium/uri"
license = "MIT/Apache-2.0"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Carl Lerche <me@carllerche.com>",
  "Sean McArthur <sean@seanmonstar.com>",
]
description = """
A Uri type for representing
"""
keywords = ["uri"]

[dependencies]
bytes = "0.4"

